# souffleur

./: .gitignore  README.md  b_out.txt  config.toml  daemon.py  pyproject.toml  souffleur.py  soufleur.py  teams_ui.py  test_workiq.py
souffleur/: __init__.py  __main__.py  cli.py  colors.py  daemon.py  scout.py  teams_ui.py
